--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -35,6 +35,8 @@
     <!-- Shown in welcome screen for first time -->
     <string name="grant_storage_read_permission">Die App benötigt Leserechte für eine optimale Performance.</string>
     <!-- Shown in welcome screen for first time -->
+    <string name="grant_notification_permission">App needs notification permissions for optimal performance.</string>
+    <!-- Shown in welcome screen for first time -->
     <string name="grant_permission">Zugriff gewähren</string>
     <!-- Grant permission button for welcome screen -->
     <string name="grant">Erlauben</string>
@@ -681,6 +683,8 @@ Wir sind ein Team von Open-Source-Entwicklern, die hart daran arbeiten, ein werb
     <string name="welcome_transfer_summary">Datenübertragung zwischen Geräten über WLAN\nHohe Übertragungsgeschwindigkeiten mit Android WiFi-Direct</string>
     <!-- Welcome screen permission required -->
     <string name="welcome_permission">Wir benötigen Speicherrechte, um Zugriff auf Mediendateien zu erhalten</string>
+    <!-- Notification screen permission required -->
+    <string name="notification_permission">We need notification permissions to show app operations</string>
     <!-- Welcome screen license agreement page -->
     <string name="before_we_start">Bevor wir beginnen…</string>
     <!-- Welcome screen license agreement page -->
@@ -960,6 +964,10 @@ Wir sind ein Team von Open-Source-Entwicklern, die hart daran arbeiten, ein werb
     <string name="retention_bytes_title">Retention by data size</string>
     <!-- Retention bytes summary in trash bin settings -->
     <string name="retention_bytes_summary">Maximum data (in MBs) trash bin can store</string>
+    <!-- Cleanup trash bin settings -->
+    <string name="cleanup_interval_title">Cleanup interval</string>
+    <!-- Cleanup summary in trash bin settings -->
+    <string name="cleanup_interval_summary">Trigger auto-cleanup interval (hours)</string>
     <!-- Retention days title in trash bin settings -->
     <string name="retention_days_title">Retention by days</string>
     <!-- Retention days summary in trash bin settings -->
