--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -35,6 +35,8 @@
     <!-- Shown in welcome screen for first time -->
     <string name="grant_storage_read_permission">A necessidade de aplicação de permissões de leitura de armazenamento para um ótimo desempenho.</string>
     <!-- Shown in welcome screen for first time -->
+    <string name="grant_notification_permission">App needs notification permissions for optimal performance.</string>
+    <!-- Shown in welcome screen for first time -->
     <string name="grant_permission">Conceder permissão</string>
     <!-- Grant permission button for welcome screen -->
     <string name="grant">concedente</string>
@@ -643,6 +645,8 @@
     <string name="welcome_transfer_summary">Transfira dados entre dispositivos por wifi\nAltas velocidades de transferência usando o android wifi direct</string>
     <!-- Welcome screen permission required -->
     <string name="welcome_permission">Precisamos de permissões de armazenamento para acessar seus arquivos de mídia</string>
+    <!-- Notification screen permission required -->
+    <string name="notification_permission">We need notification permissions to show app operations</string>
     <!-- Welcome screen license agreement page -->
     <string name="before_we_start">Antes de começarmos…</string>
     <!-- Welcome screen license agreement page -->
@@ -917,6 +921,10 @@
     <string name="retention_bytes_title">Retention by data size</string>
     <!-- Retention bytes summary in trash bin settings -->
     <string name="retention_bytes_summary">Maximum data (in MBs) trash bin can store</string>
+    <!-- Cleanup trash bin settings -->
+    <string name="cleanup_interval_title">Cleanup interval</string>
+    <!-- Cleanup summary in trash bin settings -->
+    <string name="cleanup_interval_summary">Trigger auto-cleanup interval (hours)</string>
     <!-- Retention days title in trash bin settings -->
     <string name="retention_days_title">Retention by days</string>
     <!-- Retention days summary in trash bin settings -->
